--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angularfire": "~1.1.3",
-    "angular": "^1.5.4"
+    "angular": "^1.5.4",
+    "ngstorage": "^0.3.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
